--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-body {
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-  min-height: 0;
-}
+
 a {
   cursor: pointer;
 }
@@ -107,11 +103,13 @@ a {
   height: 7px;
 }
 .window_header {
-  padding: 2px 10px 12px 10px;
+  padding: 10px 15px 10px 15px;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
-  border-bottom: 1px #aaaaab solid;
-  border-radius: 8px 8px 0 0;
-  background: #ffffff;
+  border: 3px #ffffff solid;
+  /* border-radius: 8px 8px 0 0; */
+  border-radius: 15px;
+  background: #FBD1A2;
+  /* background: #ffffff;
   background: -moz-linear-gradient(top, #ffffff 0%, #eaeaea 100%);
   background: -webkit-gradient(
     linear,
@@ -123,9 +121,17 @@ a {
   background: -webkit-linear-gradient(top, #ffffff 0%, #eaeaea 100%);
   background: -o-linear-gradient(top, #ffffff 0%, #eaeaea 100%);
   background: -ms-linear-gradient(top, #ffffff 0%, #eaeaea 100%);
-  background: linear-gradient(to bottom, #ffffff 0%, #eaeaea 100%);
+  background: linear-gradient(to bottom, #ffffff 0%, #eaeaea 100%); */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea', GradientType=0 );
   font-size: 13px;
+    font-family: "Lobster", sans-serif;
+  margin: 0;
+  min-height: 0;
+  font-size: 14px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 .window_header a.logo {
   float: left;
